// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbHeading component should pass classname 1`] = `
.pf-c-breadcrumb__heading {
  display: block;
  font-size: 0.875rem;
}
.pf-c-breadcrumb__item.Class {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3;
  cursor: default;
}

<li
  className="pf-c-breadcrumb__item Class"
>
  <h1
    className="pf-c-breadcrumb__heading"
  >
    Item
  </h1>
</li>
`;

exports[`BreadcrumbHeading component should pass custom id 1`] = `
.pf-c-breadcrumb__heading {
  display: block;
  font-size: 0.875rem;
}
.pf-c-breadcrumb__item {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3;
  cursor: default;
}

<li
  className="pf-c-breadcrumb__item"
  id="Id"
>
  <h1
    className="pf-c-breadcrumb__heading"
  >
    Item
  </h1>
</li>
`;

exports[`BreadcrumbHeading component should render breadcrumbHeading with target 1`] = `
.pf-c-breadcrumb__link.pf-m-current {
  display: block;
  font-size: inherit;
  font-weight: 500;
  line-height: inherit;
  cursor: default;
  color: #151515;
  text-decoration: none;
}
.pf-c-breadcrumb__heading {
  display: block;
  font-size: 0.875rem;
}
.pf-c-breadcrumb__item {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3;
  cursor: default;
}

<li
  className="pf-c-breadcrumb__item"
>
  <h1
    className="pf-c-breadcrumb__heading"
  >
    <a
      aria-current="page"
      className="pf-c-breadcrumb__link pf-m-current"
      href="#here"
      target="_blank"
    >
      Item
    </a>
  </h1>
</li>
`;

exports[`BreadcrumbHeading component should render default breadcrumbHeading 1`] = `
.pf-c-breadcrumb__heading {
  display: block;
  font-size: 0.875rem;
}
.pf-c-breadcrumb__item {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3;
  cursor: default;
}

<li
  className="pf-c-breadcrumb__item"
>
  <h1
    className="pf-c-breadcrumb__heading"
  >
    Item
  </h1>
</li>
`;

exports[`BreadcrumbHeading component should render link breadcrumbTItle 1`] = `
.pf-c-breadcrumb__link.pf-m-current {
  display: block;
  font-size: inherit;
  font-weight: 500;
  line-height: inherit;
  cursor: default;
  color: #151515;
  text-decoration: none;
}
.pf-c-breadcrumb__heading {
  display: block;
  font-size: 0.875rem;
}
.pf-c-breadcrumb__item {
  display: flex;
  align-items: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.3;
  cursor: default;
}

<li
  className="pf-c-breadcrumb__item"
>
  <h1
    className="pf-c-breadcrumb__heading"
  >
    <a
      aria-current="page"
      className="pf-c-breadcrumb__link pf-m-current"
      href="/somewhere"
      target={null}
    >
      Item
    </a>
  </h1>
</li>
`;
